force-app/main/default/objects/CS_Attribution__c/CS_Attribution__c.object-meta.xml
<CustomObject>
    <label>CS Attribution (Old)</label>
    <nameField>
        <displayFormat>CSAtt-{000000}</displayFormat>
        <label>CS Attribution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CS Attributions (Old)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>