force-app/main/default/objects/CS_Attribution__c/fields/New_Amount__c.field-meta.xml
<CustomField>
    <fullName>New_Amount__c</fullName>
    <label>New Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>