force-app/main/default/objects/CS_Attribution__c/fields/New_Amount_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>New_Amount_Date_Time__c</fullName>
    <formula>DATETIMEVALUE(TEXT(YEAR(New_Amount_Date__c))&amp;&quot;-&quot;&amp;TEXT(MONTH(New_Amount_Date__c))&amp;&quot;-&quot;&amp;TEXT(DAY(New_Amount_Date__c))&amp;&quot; 00:01:00&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Amount Date/Time</label>
    <type>DateTime</type>
</CustomField>